<resources>
    <string name="app_name">WBLConnection</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="license_plate">License plate</string>
    <string name="password">Password</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_sign_up_with_qr_code">New User? Sign up with QR code</string>
    <string name="sign_up">SIGN UP</string>
    <string name="send_message_without_logging_in">Send message without logging in</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="registration_is_only_possible_with_a_qr_code_sticker">Registration is only possible with a QR code sticker</string>
    <string name="go_to_qr_scanner">Go to QR Scanner</string>
    <string name="original_wbl_stickers_do_not_redirect_to_external_sites_or_request_access">Original WBL stickers do not redirect to external sites or request access.</string>
    <string name="ok">OK</string>
    <string name="registration_successful">Registration successful</string>
    <string name="used_qr_code">Used QR Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">email address</string>
    <string name="send_message">send message</string>
    <string name="camera_permission_is_required">Camera permission is required!</string>
    <string name="qr_code_scanning_successful">QR code Scanning successful</string>
    <string name="message12">you forgot to turn on the headlights</string>
    <string name="message11">The left brake light is not on</string>
    <string name="message10">The right parking lights are not on</string>
    <string name="message9">Your headlights are not on</string>
    <string name="message8">Hi, how are you?</string>
    <string name="message7">Your car/motorcycle is being vandalized</string>
    <string name="message6">The window was left rolled down</string>
    <string name="message5">A pet is left in the car</string>
    <string name="message4">There is a child in the car</string>
    <string name="message2">One of the doors is open</string>
    <string name="message1">The right brake light is not on</string>
    <string name="message3">The left parking lights are not on</string>
    <string name="send">Send</string>
    <string name="messages">messages</string>
    <string name="licence_plate_doesn_t_exist">licence plate doesn\'t exist</string>
    <string name="doesn_t_exist">doesn\'t exist</string>
    <string name="qr_code_information">Qr Code Information</string>
    <string name="like">Like</string>
    <string name="abc123">ABC123</string>
    <string name="user_settings">User Settings</string>
    <string name="message_volume">Message volume</string>
    <string name="my_rating">My rating</string>
    <string name="number">Number</string>
    <string name="welcome">Welcome</string>
    <string name="aaa123">AAA123</string>
    <string name="send_message2">Send Message</string>
    <string name="my_messages">My messages</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="change_password">change password</string>
    <string name="forget_password">Forgot password</string>
    <string name="sended_to_licence_plate">sended to licence plate</string>
    <string name="this_message">this message</string>
    <string name="fold_qr_code">Fold Qr code</string>
    <string name="send_message_successful">Send message successful</string>
    <string name="created_at">Created At</string>
    <string name="example">example</string>
    <string name="success_login">" Success login"</string>
    <string name="login_failed_for_some_reason">Login failed for some reason</string>
    <string name="this_email_does_not_exist">This email does not exist.</string>
    <string name="password_reset_email_sent_successfully">Password reset email sent successfully.</string>
    <string name="the_email_field_is_empty">The email field is empty</string>
    <string name="unknown_error">Unknown error</string>
    <string name="successful_login">successful login</string>
    <string name="successful">successful</string>
    <string name="email_field_is_empty">email field is empty</string>
    <string name="password_update_successful">password update successful</string>
    <string name="email_doesn_t_exist">"email doesn't exist "</string>
    <string name="camera_permission_is_required_to_scan_the_qr_code">Camera permission is required to scan the QR code</string>
    <string name="code_not_visible">Code not visible</string>
    <string name="code_discarded_please_scan_a_new_one">Code discarded, please scan a new one</string>
    <string name="invalid_qr_code_format">Invalid QR code format</string>
    <string name="this_qr_code_is_available">This QR code is available</string>
    <string name="this_qr_code_are_used">This QR code are used</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="successful_registration">✅ Successful registration</string>
    <string name="error">❌ Error: %1$s</string>
    <string name="unknown_qr_code">Unknown QR code</string>
    <string name="qr_code_already_used">QR code already used</string>
    <string name="qr_code_available">QR code available</string>
    <string name="exist">✅ exist</string>
    <string name="keep_writting">⚠️  keep writting</string>
    <string name="doesn_t_exist2">❌ doesn\'t exist!</string>
    <string name="message_successfully_sent_to">Message successfully sent to %1$s</string>
    <string name="messages_can_only_be_sent_to_existing_license_plates">❗ Messages can only be sent to existing license plates.</string>
    <string name="login_fail">login fail</string>
</resources>