<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationSuccessful"
    android:background="#121212">


     <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp" />


     <TextView
        android:id="@+id/txtSuccessMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_successful"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


     <EditText
        android:id="@+id/etEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textColor="#FFFFFF"
        android:backgroundTint="#121212"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSuccessMessage"
        android:layout_margin="16dp"
        android:inputType="textEmailAddress" />


     <EditText
        android:id="@+id/etLicensePlate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/license_plate"
        android:textColor="#FFFFFF"
        android:backgroundTint="#121212"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_margin="16dp" />


     <Button
        android:id="@+id/btnConfirm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:backgroundTint="#1E88E5"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLicensePlate"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
