<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5D5353"

    tools:context=".SendMessageSuccessful">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtSuccessMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_message_successful"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        tools:ignore="HardcodedText" />


    <EditText
        android:id="@+id/editTextLicensePlateReceiver"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#121212"
        android:hint="@string/sended_to_licence_plate"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#B2A7A7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSuccessMessage"
        tools:ignore="HardcodedText" />


    <EditText
        android:id="@+id/etLicensePlate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#121212"
        android:hint="@string/this_message"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#8C8181"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLicensePlateReceiver"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#1E88E5"
        android:padding="12dp"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLicensePlate" />

</androidx.constraintlayout.widget.ConstraintLayout>
